# dwm1001

./: .gitignore  README.md  main.c
apps/accel/: CMakeLists.txt  README.rst  accel.c  accel.h  main.c  prj.conf
ble/: ble_base.c  ble_base.h  ble_device.c  ble_device.h  ble_service.c  ble_service.h  ble_uuids.h
boards/arm/nrf52_dwm1001/: Kconfig  Kconfig.board  Kconfig.defconfig  nrf52_dwm1001.dts  nrf52_dwm1001.yaml  nrf52_dwm1001_defconfig  pre_dt_board.cmake
boards/arm/nrf52_dwm1001/doc/: index.rst
decadriver/: deca_device.c
dts/bindings/gpio/: gpio-generic.yaml
dts/bindings/qorvo,dwm1001/: qorvo,dwm1001.yaml
examples/: build_all.sh
examples/ex_01a_simple_tx/: CMakeLists.txt  ex_01a_main.c  prj.conf  update2.sh
examples/ex_01b_tx_sleep/: CMakeLists.txt  ex_01b_main.c
examples/ex_01c_tx_sleep_auto/: CMakeLists.txt  ex_01c_main.c  prj.conf
examples/ex_01d_tx_timed_sleep/: CMakeLists.txt  ex_01d_main.c
examples/ex_01e_tx_with_cca/: CMakeLists.txt  ex_01e_tx_with_cca.c
examples/ex_02a_simple_rx/: CMakeLists.txt  ex_02a_main.c  prj.conf
examples/ex_02b_rx_preamble_64/: CMakeLists.txt  ex_02b_main.c
examples/ex_02c_rx_diagnostics/: CMakeLists.txt  ex_02c_main.c
examples/ex_02d_rx_sniff/: CMakeLists.txt  ex_02d_main.c
examples/ex_02e_rx_dbl_buff/: CMakeLists.txt  ex_02e_main.c
examples/ex_03a_tx_wait_resp/: CMakeLists.txt  ex_03a_main.c  prj.conf
examples/ex_03b_rx_send_resp/: CMakeLists.txt  ex_03b_main.c
examples/ex_03c_tx_wait_resp_leds/: CMakeLists.txt  ex_03c_main.c
examples/ex_03d_tx_wait_resp_interrupts/: CMakeLists.txt  ex_03d_main.c
examples/ex_04a_cont_wave/: CMakeLists.txt  ex_04a_main.c
examples/ex_04b_cont_frame/: CMakeLists.txt  ex_04b_main.c
examples/ex_05a_ds_twr_init/: CMakeLists.txt  ex_05a_main.c
examples/ex_05b_ds_twr_resp/: CMakeLists.txt  ex_05b_main.c
examples/ex_05c_ds_twr_resp_ble/: CMakeLists.txt  ex_05c_main.c  prj.conf
examples/ex_06a_ss_twr_init/: CMakeLists.txt  ex_06a_main.c
examples/ex_06b_ss_twr_resp/: CMakeLists.txt  ex_06b_main.c
examples/ex_07a_ack_data_tx/: CMakeLists.txt  ex_07a_main.c  update.sh
examples/ex_07b_ack_data_rx/: CMakeLists.txt  ex_07b_main.c
examples/ex_08a_low_power_listen_rx/: CMakeLists.txt  ex_08a_main.c
examples/ex_08b_low_power_listen_tx/: CMakeLists.txt  ex_08b_main.c
examples/ex_09a_bandwidth_power_ref_meas/: CMakeLists.txt  ex_09a_main.c
examples/ex_09b_bandwidth_power_comp/: CMakeLists.txt  ex_09b_main.c
examples/ex_10a_gpio/: CMakeLists.txt  ex_10a_main.c
examples/ex_11a_button/: CMakeLists.txt  ex_11a_main.c
examples/ex_11b_leds/: CMakeLists.txt  ex_11b_main.c
examples/ex_12a_ble/: CMakeLists.txt  ex_12a_main.c  prj.conf
examples/ex_13a_accelerometer/: CMakeLists.txt  README.rst  ex_13a_accelerometer.c  ex_13a_accelerometer.h  prj.conf
examples/ex_14a_spi0_master/: CMakeLists.txt  README.md  main.c  nrf52_dwm1001.overlay  prj.conf  spi_master.c  spi_master.h
examples/ex_14b_spi0_slave/: CMakeLists.txt  README.md  configure.sh  main.c  nrf52_dwm1001.overlay  prj.conf  spi_slave.c  spi_slave.h
platform/: deca_range_tables.c  deca_spi.c  port.c
